# lofar-blob

./: CMakeLists.txt  Jenkinsfile  README.md  lofar_config.h
deploy/: galaxy.sh
patches/: std_namespace.patch
